--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* styles */
+:root {
+  /* background: rgb(133, 94, 133); */
+}
 
-/* less: http://lesscss.org/ */
 * {
   box-sizing: border-box;
 }
