Flask communication working

--- a/templates/main.html
+++ b/templates/main.html
@@ -11,9 +11,8 @@
     <link href="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
-
-    <!-- TODO: DELETE ALL JS BELOW -->
   </head>
+
   <body>
     <header>
       <h1>
@@ -35,7 +34,7 @@
         </form>
         <section class="features">
         <ul id="results">
-          <script src="../map/geochart.js"></script>
+          <script src="public/map/geochart.js"></script>
         </ul>
         </section>
         <div id="regions_div" style="width: 900px; height: 500px;"></div>
@@ -48,10 +47,10 @@
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.js"></script>
-    <script type="text/javascript" src="../map/triggerMap.js"></script>
-    <script type="text/javascript" src="../app.js"></script>
+    <script type="text/javascript" src="map/triggerMap.js"></script>
+    <!-- <script type="text/javascript" src="../app.js"></script> -->
     <!-- <script type="text/javascript" src="../src/fetch_data.js"></script> -->
     <!-- <script type="text/javascript" src="src/aggregate.js"></script> -->
-
   </body>
+
 </html>
