--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,8 @@
     <link href="https://sp-bootstrap.global.ssl.fastly.net/8.0.0/sp-bootstrap.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ConnorAtherton/loaders.css/master/loaders.min.css">
+
   </head>
 
   <body>
@@ -28,29 +30,36 @@
 
     <main>
         <h4>Let's search for a playlist:</h4>
-        <form>
-        <input type="text" maxlength="100" placeholder="Playlist URI">
-        <button id="trigger" class="btn btn-sm btn-aubergine" type="submit">Submit</button>
+        <form id="form">
+          <input type="text" maxlength="100" placeholder="Playlist name">
+          <button id="trigger" class="btn btn-sm btn-aubergine" type="submit">Submit</button>
         </form>
+        <div id="spinner" class="line-scale loader-inner" style="display: none;">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
         <section class="features">
-        <ul id="results">
-          <script src="public/map/geochart.js"></script>
-        </ul>
+          <ul id="results">
+            <script src="static/js/geochart.js"></script>
+          </ul>
         </section>
         <div id="regions_div" style="width: 900px; height: 500px;"></div>
     </main>
 
     <!-- Your web-app is https, so your scripts need to be too -->
     <!-- Won't show up for user -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="static/css/loader.min.css">
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
             integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
             crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.js"></script>
-    <script type="text/javascript" src="map/triggerMap.js"></script>
-    <!-- <script type="text/javascript" src="../app.js"></script> -->
-    <!-- <script type="text/javascript" src="../src/fetch_data.js"></script> -->
-    <!-- <script type="text/javascript" src="src/aggregate.js"></script> -->
+    <script type="text/javascript" src="static/js/triggerMap.js"></script>
+
   </body>
 
 </html>
