--- a/templates/main.html
+++ b/templates/main.html
@@ -45,12 +45,11 @@
       </div>
 
       <div style="position: fixed; right: 7%;">
-        <section class="features">
           <ul id="results">
             <script src="../static/js/geochart.js"></script>
           </ul>
-        </section>
         <div id="regions_div" style="width: 900px; height: 550px;"></div>
+        <p id="sidenote" style="font-size: 10px; position: fixed; right: 15%;"></p>
       </div>
     </main>
 
