--- a/templates/index.html
+++ b/templates/index.html
@@ -32,9 +32,6 @@
       <div>
         <h1> To view your passport, please log in with your Spotify account.</h1>
         <form id="form">
-          <div class="col-md-7">
-            <input type="text" class="form-control col-sm-5" maxlength="100" placeholder="Your Spotify account URI">
-          </div>
           <button id="btn" type="submit" class="btn btn-primary btn-aubergine">Log in with Spotify</button>
         </form>
       </div>
@@ -50,7 +47,7 @@
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script> -->
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="https://kit.fontawesome.com/bab8a72573.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../static/js/trigger_login.js"></script>
+    <script type="text/javascript" src="../static/js/triggerLogin.js"></script>
   </body>
 </html>
 
