--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,6 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ConnorAtherton/loaders.css/master/loaders.min.css">
-
   </head>
 
   <body>
@@ -42,6 +41,10 @@
             <div></div>
           </div>
         </form>
+
+        <form id="form">
+          <button id="btn" type="submit" class="btn btn-primary btn-aubergine">Logout</button>
+        </form>
       </div>
 
       <div style="position: fixed; right: 7%;">
@@ -60,7 +63,7 @@
     </div>
 
     <!-- Your web-app is https, so your scripts need to be too -->
-    <!-- Won't show up for user -->
+    <!-- stylesheets -->
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="stylesheet" href="../static/css/loader.min.css">
     <script src="https://kit.fontawesome.com/bab8a72573.js" crossorigin="anonymous"></script>
