--- a/templates/index.html
+++ b/templates/index.html
@@ -31,9 +31,7 @@
     <div class="container">
       <div>
         <h1> To view your passport, please log in with your Spotify account.</h1>
-        <form id="form">
-          <button id="btn" type="submit" class="btn btn-primary btn-aubergine">Log in with Spotify</button>
-        </form>
+        <a href="login" class="btn btn-primary btn-aubergine" role="link">Log in with Spotify</a>
       </div>
     </div>
 
@@ -44,7 +42,6 @@
     </div>
 
     <!-- Your web-app is https, so your scripts need to be too -->
-    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script> -->
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="https://kit.fontawesome.com/bab8a72573.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="../static/js/triggerLogin.js"></script>
