--- a/templates/login.html
+++ b/templates/login.html
@@ -47,10 +47,9 @@
     </div>
 
     <!-- Your web-app is https, so your scripts need to be too -->
-    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script> -->
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/bab8a72573.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../static/js/trigger_login.js"></script>
+    <script type="text/javascript" src="../static/js/triggerLogin.js"></script>
   </body>
 </html>
 
